# Car-Speed-Simulation

./: README.md  deploy.sh  nginx.conf  requirements.txt  setup.sh  test-api.sh
backend/: main  sim
backend/app/: main.py
backend/app/api/: routes_files.py  routes_route.py  routes_snap.py  run.py
backend/app/core/: config.py  logger.py
backend/app/schemas/: run.py
backend/app/services/: ekf_bridge.py  elevation.py  here.py  imu.py  physics.py  planner.py  player.py  simple_physics.py  writer.py
backend/app/simulator/: current_run.json  route.json  waypoints.json
backend/app/utils/: geo.py  io.py
backend/cpp/: CMakeLists.txt  ekf.cpp  ekf.hpp  main.cpp  physics_binding.cpp  physics_engine.cpp  physics_engine.hpp  physics_main.cpp  test_input.json
backend/routes/simulation/: CMakeLists.txt
frontend/: env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BusCanvas.tsx  BusModel.tsx  BusOverlay.tsx  BusScene.tsx  ClickHandler.tsx  CustomMap.tsx  LayerAnchor.tsx  MapRefSetter.tsx
frontend/hooks/: useProjectedPosition.ts
frontend/public/: Public-Bus.glb  bus2.glb
frontend/utils/: api.ts  slope.ts
